<resources>
    <string name="app_name">CrownStackKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view_content_description">image_view_content_description</string>
    <string name="loading">Loading…</string>
    <string name="track_name">Track Name</string>
    <string name="collection_name">Collection Name</string>
    <string name="track_id">Track Id</string>
    <string name="genre_name">Genre Name</string>
    <string name="release_date">Release Date</string>
    <string name="song_duration">Song Duration</string>
    <string name="transition_name">transitionName</string>
</resources>