<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:fillViewport="true"
    android:padding="@dimen/_8sdp"
    tools:context=".fragments.SongDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/white_curve_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/songCoverImageView"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="@dimen/_10sdp"
                android:transitionName="@string/transition_name"
                android:contentDescription="@string/image_view_content_description"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/track_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_background"
            android:fontFamily="cursive"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/collection_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/collectionNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_background"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/track_id"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/trackIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_background"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/genre_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/genreNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_background"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/release_date"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/releaseDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_background"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="5dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/song_duration"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/songDurationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_background"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>